k8s/docker-desktop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ospo-app-direct
  labels:
    app: ospo-app-direct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ospo-app-direct
  template:
    metadata:
      labels:
        app: ospo-app-direct
    spec:
      containers:
        - name: ospo-app
          image: ospo-events-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ospo-app-direct
  labels:
    app: ospo-app-direct
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ospo-app-direct
---
apiVersion: v1
kind: Service
metadata:
  name: ospo-app-lb-direct
  labels:
    app: ospo-app-direct
spec:
  type: LoadBalancer
  ports:
    - port: 7777
      targetPort: 5000
      protocol: TCP
      name: web
  selector:
    app: ospo-app-direct
