k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-ospo-app
spec:
  selector:
    app: ospo-app
  ports:
  - port: 7777
    targetPort: 5000
  type: LoadBalancer
  externalTrafficPolicy: Local
