k8s/port-forward.yaml
apiVersion: v1
kind: Service
metadata:
  name: direct-access-service
spec:
  type: NodePort
  ports:
  - name: web
    port: 5000
    targetPort: 5000
    nodePort: 31234
  selector:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: ospo-app
