k8s/auth-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ospo-events-ospo-app-auth
  namespace: prod-rh-events-org
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: ospo-events
    app.kubernetes.io/name: ospo-app
spec:
  host: ospo-events-ospo-app-prod-rh-events-org.apps.ospo-osci.z3b1.p1.openshiftapps.com
  path: /auth
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: keycloak
    weight: 100
  wildcardPolicy: None
