k8s/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  labels:
    app: keycloak
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: ${keycloak_hostname}
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ospo-app
  labels:
    app: ospo-app
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: ${app_hostname}
  to:
    kind: Service
    name: ospo-app
  port:
    targetPort: 4576
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
